fix safari arrow icons visibilitty and btn font color

--- a/src/components/Pagination/pagination.styles.css
+++ b/src/components/Pagination/pagination.styles.css
@@ -15,6 +15,7 @@
     border: none;
     cursor: pointer;
     background-color: var(--bg-light);
+    color: var(--bg-dark);
 }
 
 .pagination__btn--selected {
